# printf

./: .ft_printf.c.swp  .gitignore  .main.c.un~  CMakeLists.txt  Makefile  a.out  author  ft_printf.c  ft_printf.h  help.c  help_float.c  itoa_base.c  main.c  main.c~  not_found.c  parser.c  parser_spec.c  pr.c  pr.c~  print_ae.c  print_aefg.c  print_all.c  print_bxou.c  print_c.c  print_di.c  print_f.c  print_g.c  print_n.c  print_p.c  print_percent.c  print_s.c  print_ws.c  ws_help.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: ft_printf.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striter.c  (+18 more)
srcs/: ft_printf.c  help.c  help_float.c  help_spec_val.c  itoa_base.c  libft.c  libft2.c  not_found.c  parser.c  parser_spec.c  print_ae.c  print_aefg.c  print_all.c  print_bxou.c  print_c.c  print_di.c  print_f.c  print_g.c  print_n.c  print_p.c  print_percent.c  print_s.c  print_ws.c  ws_help.c
